[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cs_data_utils"
version = "1.0.0"
description = "Shared data utilities for civil service data pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=3.0",
]
